Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.0.9
	 * Save:	7
	 * Network:	8

	CommandLine:	1.0.4.1
	Flash GUI:	1.0.3.5
	Increment1GUI:	1.1.1.1
	Simple GUI:	1.1.1.1
	Swing GUI:	1.0.6.4

1.1.0.9

	if UNDO fails once, do not try and do undo any more

1.1.0.8 (02.04.2012)

	Fixed crash in AIHardCapital.java for map CRO.map and capital italianlike game
	copyright date fixed in About box
	memory usage smaller for PicturePanel, Castle in the Sky.map OutOfMemoryError
	can click to toggle animation at the end of the game
	mission to destroy a player show the players color as well as the name
	on Mac OS X the .sh files run correctly and have nice icons

1.1.0.7 (11.03.2012)

	spaces in names support for publishing new maps
	fixed nullpointer when you close the MapStore right after fetching a new XML file
	mapeditor saved map version inside map file
	update to grasshopper to not error on Logger.info and to correctly report errors in javaw mode

1.1.0.6 (08.01.2012)

	fixed xml not working sometimes when there are unicode chars
	fixed, show loading screens when loading data in MapStore
	fixed on windows 7, preview map image does not download correctly

1.1.0.5 (04.01.2012)

	got rid of Abba dependence, now just uses SwingME
	fix for maps that link to existing cards files, such as france.map
	fix for MapStore showing local maps with spaces in names

1.1.0.4 (30.12.2011)

	fallback to png if can not save jpeg for OpenJDK Linux users
	map editor, can load maps with empty missions and spaces in the names
	MapStore will show scaled down full image when preview image is missing
	Black player on stats panel has a white background
	got rid of dependence on AbbaRepository, replaces it with net.yura.cache.Cache

1.1.0.3 (21.12.2011)

	when there is a new version out, clicking ok takes you to the website
	NewGameFrame will show preview of map even if preview file is missing (shows red dot)
	support for java 1.4 again, got rid of the dependence on ToolsME.jar